# wallet-manager

./: .env  Cargo.toml  learn.md  targets.md
examples/: basic_usage.rs
pyscraper/: airdrop_scraper.session  airdrops.db  func.sh  galxe_campaigns.db  main.py  requirements.txt  run.py
pyscraper/data/: enriched_campaigns.db
pyscraper/scrapers/: airdrops_io.py  galaxe.py  socialmedia.py
pyscraper/sources/reddit/: config.yaml  fetch.py  parser.py  results.db  subs.txt  test_reddit.py  tree  utils.py
pyscraper/sources/telegram/data/: init_db.py  pointer.json
pyscraper/sources/twitter/: accounts.txt  fetch.py
pyscraper/utils/: campaign_database.py
src/: error.rs  lib.rs  types.rs
src/activity/: config.rs  mod.rs  provider_sim.rs  realistic.rs  simulator.rs  test.rs
src/analysis/: feedback.rs  mod.rs  postmortem.rs  test.rs
src/balance/: manager.rs  mod.rs
src/command_center/: cli.rs  mod.rs  test.rs  tui.rs
src/config/: encryption.rs  mod.rs  test.rs
src/funding/: cex.rs  cross_chain.rs  mixer.rs  mod.rs
src/funding/mixer/: fund_mixer.rs  mixer_funding.rs  mod.rs  tests.rs  types.rs
src/funding/mixer/connectors/: aztec.rs  (+5 more)
src/generator/: derivation.rs  mod.rs
src/intelligence/: client.rs  ml_model.rs  mod.rs  ranker.rs  storage.rs  test.rs
src/network/: mod.rs  proxy.rs  test.rs
src/orchestration/: campaign.rs  coordinator.rs  mod.rs  test.rs  wallet_graph.rs
src/security/: encryption.rs  mod.rs
src/spoofing/: footprint.rs  mod.rs  test.rs
src/telemetry/: logger.rs  mod.rs  notifier.rs  test.rs
src/utils/: anti_detection.rs  mod.rs
(+9 files in other folders)
