[package]
name = "wallet-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# Crypto & Keys
secp256k1 = "0.28"
tiny-keccak = "2.0"
bip39 = "2.0"
hdwallet = "0.4"
rand = "0.8"
hex = "0.4"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"

# Async & Networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Web3
ethers = "2.0"

# Utils
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = {version = "0.4.41", features = ["serde"]}
zeroize = "1.8.1"
base64 = "0.21.7"
async-trait = "0.1.88"
hmac = "0.12.1"
fastrand = "2.3.0"
log = "0.4.27"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"